<resources>
    <string name="app_name">HandChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="story">There once was a very wealthy and curious king. This king had a huge boulder placed in the middle of a road. Then he hid nearby to see if anyone would try to remove the gigantic rock from the road.

The first people to pass by were some of the king’s wealthiest merchants and courtiers. Rather than moving it, they simply walked around it.

A few loudly blamed the King for not maintaining the roads. Not one of them tried to move the boulder.

Finally, a peasant came along. His arms were full of vegetables. When he got near the boulder, rather than simply walking around it as the others had, the peasant put down his load and tried to move the stone to the side of the road. It took a lot of effort but he finally succeeded.

The peasant gathered up his load and was ready to go on his way when he say a purse lying in the road where the boulder had been. The peasant opened the purse.

The purse was stuffed full of gold coins and a note from the king. The king’s note said the purse’s gold was a reward for moving the boulder from the road.

The king showed the peasant what many of us never understand: every obstacle presents an opportunity to improve our condition.</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="settings">Settings</string>
    <string name="informations">Informations</string>
    <string name="hello">Hello..</string>
    <string name="lets_talk">Lets talk</string>
    <string name="sign">Sign</string>
    <string name="text">Text</string>
    <string name="dictionary">Dictionary</string>
    <string name="learn">Learn</string>
    <string name="language">Language</string>
    <string name="information">Information</string>
    <string name="notification">Notification</string>
    <string name="reset">Reset</string>
    <string name="translate">Translate</string>
    <string name="feature_under_development">Feature under development</string>
    <string name="folder">Folder</string>
    <string name="photo">Photo</string>
    <string name="notifyOn">Notification Enabled</string>
    <string name="notifyOff">Notification Disabled</string>
    <string name="dailyNotify">Comeback</string>
    <string name="sign_team">Sign Team</string>
</resources>